Prevent horizontal scroll

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -12,6 +12,7 @@
 #commons-body {
     width:95%;
     margin: auto;
+    overflow-x:hidden;
 }
 
 .grandnode-with-margin {
